@@ -1,5 +1,9 @@
 2005-10-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
+	* nnslashdot.el (nnslashdot-retrieve-headers-1): Update to new
+	HTML.
+	(nnslashdot-request-article): Ditto.
+
 	* lpath.el (featurep): Add nobreak-char-display.
 
 2005-10-20  Hiroshi Fujishima  <hiroshi.fujishima@gmail.com>  (tiny change)
